feat(board):Added board and game object

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        
+        <h1 id="player-name"></h1>
         <div class="board">
             <div id="position-1" class="cell 1"></div>
             <div id="position-2" class="cell 2"></div>
@@ -38,6 +38,6 @@
         </div>
         
     </div>
-    <script src="js/main.js"></script>
+    <script type='module' src="js/main.js"></script>
 </body>
 </html>
