--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         </div>
 
         <div class="form-container" id='hidden' >
+            <div class="win-message">
+                <h1 id='winner'></h1>
+            </div>
             <div class="form">
                 <label for="player1">Player <blue>X</blue> </label>
                 <input type="text" name="player1" id="player1">
@@ -34,6 +37,7 @@
                 <input type="text" name="player2" id="player2">
     
                 <button id = 'start-game'>Play</button>
+                <button id = 'replay' class="hidden">Replay</button>
             </div>
         </div>
         
